# BioGrid2.0

./: .fieldlink.json  .gitignore  Alignment-HGAI.md  Babel.md  BioGrid v0.1-Schema.json  CHANGELOG.md  CLAUDE.md  COMMONS.md  Core_Integration.json  Detection-patterns.md  HGAI.py  INDEX.md  README-perimeter.md  README.md  Repo-integration.md  SchemaSHA.txt  Technical-validation.md  VISION.md  core.integration.v0.1.json  pyproject.toml  trust.perimeter.v0.1.json
Resilience/: The-line-redesign.md
data/: Example.json  ExampleSHA.txt  Lichen.json  LichenSHA.txt  hallucination_coupling_sensor.glyphs.json  hallucination_coupling_sensor.seed.json  hallucination_sensor.glyphs.json  hallucination_sensor.seed.json  question_seed.template.json
docs/: Civilization.md  hallucination_coupling_sensor.md  hallucination_sensor.md  question_seed.template.md
planned/: Ant-glyph-add.md  Ant_Xeno.md  CHANGELOG.md  HISTORICAL.md  PLANNED.md  README-counterweight.md  README-future_allies.md  README-phantom.md  README-yan.md  Runtime status example.json  anonymous-ai-bias-self-assessment-framework.md  commons.edit.protocol.md  commons.map.patch.phantom_outage.v0.1.json  commons.map.v0.2.draft.json  docs.md  trust.perimeter.v0.2.draft.json  warm-standby.json  🔣 Glyph Addendum: Bias Categories & Conflicts.md
registry/: atlas.shapes.json  repos.index.json
schema/: commons.map.example.v0.1.json  commons.map.v0.1.json
swarm/: core_local.md  counterweight.md  future_allies.md  phantom.md  polyform.md  security_swarm.md  sensors.md
tests/: test_glyphs.py  test_hgai.py  test_sensors.py  (+2 more)
(+269 files in other folders)
