[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biogrid"
version = "0.1.0"
description = "Symbolic-geographic framework for regenerative systems"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jsonschema",
]

[tool.setuptools.packages.find]
where = ["src"]
